now prevent database statement pool

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,5 +3,22 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# --- Hibernate ---
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# --- HikariCP Connection Pool ---
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+# --- Prevent duplicate prepared statements error ---
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
+spring.jpa.properties.hibernate.jdbc.statement_cache.size=0
+
+# Optional: helps debug connection issues
+# logging.level.com.zaxxer.hikari=INFO
+# logging.level.org.hibernate.SQL=DEBUG
